--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -59,7 +58,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - lib/public/icons/Chat.png
+    - lib/public/icons/Edit.png
+    - lib/public/icons/Love.png
+    - lib/public/icons/Profile.png
+    - lib/public/icons/Home.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
