--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ flutter:
   - lib\public\icons\category\Fila.png
   - lib\public\icons\category\Nike.png
   - lib\public\icons\category\Puna.png
+  - lib/public/imgs/Kurumi.png
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
