--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  dio: ^5.5.0+1
+  dio: ^4.0.0
   provider: ^6.1.2
 
 dev_dependencies:
