--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  dio: ^5.5.0+1
+  provider: ^6.0.5
+  mongo_dart: ^0.10.3
+  http: ^1.2.2
+  dio: ^5.4.0
+  shared_preferences: ^2.2.2
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -65,12 +70,13 @@ flutter:
   - lib/public/icons/Love.png
   - lib/public/icons/Profile.png
   - lib/public/icons/Home.png
-  - lib\public\icons\category\Adidas.png
-  - lib\public\icons\category\All.png
-  - lib\public\icons\category\Fila.png
-  - lib\public\icons\category\Nike.png
-  - lib\public\icons\category\Puna.png
+  - lib/public/icons/category/Adidas.png
+  - lib/public/icons/category/All.png
+  - lib/public/icons/category/Fila.png
+  - lib/public/icons/category/Nike.png
+  - lib/public/icons/category/Puna.png
   - lib/public/imgs/Kurumi.png
+  - lib/public/assets/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
